objects/ssot__AiAgentMomentInteraction__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AiAgentInteractionId__c</fullName>
        <label>Interaction Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiAgentMomentId__c</fullName>
        <label>AI Agent Moment Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>AI Agent Moment Interaction Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartTimestamp__c</fullName>
        <label>Start Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1748836580930_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AiAgentMomentInteraction_AiAgentMome_rel</label>
        <referenceTo>ssot__AiAgentMoment__dlm</referenceTo>
        <relationshipLabel>AiAgentMomentInteraction_AiAgentMome_rel</relationshipLabel>
        <relationshipName>rel_1748836580930_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1748836590111_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AiAgentMomentInteraction_AiAgentInte_rel</label>
        <referenceTo>ssot__AiAgentInteraction__dlm</referenceTo>
        <relationshipLabel>AiAgentMomentInteraction_AiAgentInte_rel</relationshipLabel>
        <relationshipName>rel_1748836590111_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>